--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^5.0.0",
+    "@react-google-maps/api": "^2.19.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
     "next": "^13.4.11-canary.0",
