--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/prisma-adapter": "^1.0.1",
     "@prisma/client": "^5.0.0",
     "@react-google-maps/api": "^2.19.0",
+    "@uploadthing/react": "^5.2.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
@@ -23,9 +24,11 @@
     "quill": "^1.3.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "uploadthing": "^5.2.1"
   },
   "devDependencies": {
     "prisma": "^5.0.0"
