--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.4.8",
     "next": "^13.4.11-canary.0",
     "next-auth": "^4.22.1",
+    "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
     "quill": "^1.3.7",
     "react": "18.2.0",
