--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@googlemaps/react-wrapper": "^1.1.35",
     "@prisma/client": "^5.0.0",
     "@react-google-maps/api": "^2.19.0",
     "@uploadthing/react": "^5.2.0",
@@ -20,13 +21,14 @@
     "eslint-config-next": "13.4.8",
     "flowbite": "^1.8.1",
     "flowbite-react": "^0.5.0",
+    "googlemaps": "^1.12.0",
     "next": "^13.4.11-canary.0",
     "next-auth": "^4.22.1",
     "plaiceholder": "^3.0.0",
     "postcss": "8.4.24",
     "quill": "^1.3.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-quill": "^2.0.0",
     "react-quilljs": "^1.3.3",
