--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.1",
+    "@googlemaps/markerclusterer": "^2.4.0",
     "@googlemaps/react-wrapper": "^1.1.35",
     "@prisma/client": "^5.0.0",
     "@react-google-maps/api": "^2.19.0",
